; ModuleID = '/home/carl/AnghaBench/tmux/extr_window-copy.c_window_copy_redraw_screen.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_window-copy.c_window_copy_redraw_screen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window_mode_entry = type { %struct.window_copy_mode_data* }
%struct.window_copy_mode_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.window_mode_entry*)* @window_copy_redraw_screen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @window_copy_redraw_screen(%struct.window_mode_entry* %0) #0 {
  %2 = alloca %struct.window_mode_entry*, align 8
  %3 = alloca %struct.window_copy_mode_data*, align 8
  store %struct.window_mode_entry* %0, %struct.window_mode_entry** %2, align 8
  %4 = load %struct.window_mode_entry*, %struct.window_mode_entry** %2, align 8
  %5 = getelementptr inbounds %struct.window_mode_entry, %struct.window_mode_entry* %4, i32 0, i32 0
  %6 = load %struct.window_copy_mode_data*, %struct.window_copy_mode_data** %5, align 8
  store %struct.window_copy_mode_data* %6, %struct.window_copy_mode_data** %3, align 8
  %7 = load %struct.window_mode_entry*, %struct.window_mode_entry** %2, align 8
  %8 = load %struct.window_copy_mode_data*, %struct.window_copy_mode_data** %3, align 8
  %9 = getelementptr inbounds %struct.window_copy_mode_data, %struct.window_copy_mode_data* %8, i32 0, i32 0
  %10 = call i32 @screen_size_y(i32* %9)
  %11 = call i32 @window_copy_redraw_lines(%struct.window_mode_entry* %7, i32 0, i32 %10)
  ret void
}

declare dso_local i32 @window_copy_redraw_lines(%struct.window_mode_entry*, i32, i32) #1

declare dso_local i32 @screen_size_y(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
